added some questions

--- a/lectures/Week1.ipynb
+++ b/lectures/Week1.ipynb
@@ -250,20 +250,20 @@
    "source": [
     "> _Exercises_\n",
     ">\n",
-    "> * Chapter 1: Answer these simple questions in your own words to show that you read the text\n",
-    ">  - Q1\n",
-    ">  - Q2\n",
-    "> * Chapter 2: Answer these simple questions in your own words to show that you read the text"
+    "> * Chapter 1: Answer these simple questions to show that you have read the text\n",
+    ">  - Q1. Describe in your own words Joel's approach to finding key connectors.\n",
+    ">  - Q2. What is the meaning of node-size in Figure 1-2?\n",
+    "> * Chapter 2: Answer these simple questions in to show that you have read the text\n",
+    ">  - Q1. In one line of text, what is the point of Python modules?\n",
+    ">  - Q2. Why does Joel use `from __future__ import division`?\n",
+    ">  - Q3. How are tuples different from lists?\n",
+    ">  - Q4. Describe in your own words the purpose of generators.\n",
+    "> * Chapter 3: Carry out these simple exercises & answer a few simple questions in to show that you have read the text\n",
+    ">  - Q1. Create your own version of Figure 3-1, but change the values, axes-labels, and the plot title. Just add the plot to the bottom of the notebook you've already been working for Part 3 of today's lecture.\n",
+    ">  - Q2. Create your own version of Figure 3-2, but change the values, axes-labels, and the plot title. Just add the plot to the bottom of the notebook you've already been working for Part 3 of today's lecture.\n",
+    ">  - Q3. What's the problem with the plot in Figure 3-4? Use Google (or your memory) find an example of this type of abuse on the internet and include it in your Notebook.\n",
+    ">  - Q4. Create your own version of Figure 3-9 and add to the notebook. Explain in your own words why 3-9 is a better representation of the data than 3-8."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
