--- a/lectures/Week1.ipynb
+++ b/lectures/Week1.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -65,10 +65,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1061fbf90>"
+       "<IPython.lib.display.YouTubeVideo at 0x10520bad0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -120,8 +120,8 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"800\"\n",
-       "            height=\"450\"\n",
+       "            width=\"600\"\n",
+       "            height=\"337.5\"\n",
        "            src=\"https://www.youtube.com/embed/yC754EgHpck\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -129,16 +129,16 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x106289490>"
+       "<IPython.lib.display.YouTubeVideo at 0x10520b8d0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "YouTubeVideo(\"yC754EgHpck\",width=800, height=450)"
+    "YouTubeVideo(\"yC754EgHpck\",width=600, height=337.5)"
    ]
   },
   {
@@ -150,13 +150,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600\"\n",
+       "            height=\"337.5\"\n",
+       "            src=\"https://www.youtube.com/embed/NDZyU_NlX0I\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x10520b250>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# insert video here"
+    "YouTubeVideo(\"NDZyU_NlX0I\",width=600, height=337.5)"
    ]
   },
   {
@@ -210,7 +232,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x106289090>"
+       "<IPython.lib.display.YouTubeVideo at 0x10520b910>"
       ]
      },
      "execution_count": 4,
