--- a/lectures/Week2.ipynb
+++ b/lectures/Week2.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "We'll have a couple of exercises for each chapter - some will just require you to write down some thoughts on paper, others will require some calculations.\n",
     "\n",
-    "In addition to this, we'll also practice plotting a bit more (this is a course on data visualization after all), and I'll start the whole thing off with some practical information."
+    "In addition to this, we'll also practice plotting a bit more (this is a course on data visualization after all), and I'll start the whole thing off with some practical information.\n",
+    "\n",
+    "But we'll start things off with some practical information :)"
    ]
   },
   {
