Update link to "how we do things" video

--- a/lectures/Week1.ipynb
+++ b/lectures/Week1.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Part 1: How we do things\n",
     "\n",
-    "> **_Video lecture_**: Start by going to the \"Lectures\" section and watching the \"[How we do things](https://dtu.coursera.org/02805-001/lecture/9)\" video (or clicking on the image below to watch it on YouTube). The video explains the pedagogical aspects of how the class works.\n",
+    "> **_Video lecture_**: Start by going to the \"Lectures\" section and watching the \"[How we do things](https://www.youtube.com/watch?v=NHr6Jzy9q_A)\" video (or clicking on the image below to watch it on YouTube). The video explains the pedagogical aspects of how the class works.\n",
     "> "
    ]
   },
