--- a/lectures/Week1.ipynb
+++ b/lectures/Week1.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Part 1: How we do things\n",
     "\n",
-    "> **_Video lecture_**: Start by going to the \"Lectures\" section and watching the \"[How we do things](https://www.youtube.com/watch?v=NHr6Jzy9q_A)\" video (or clicking on the image below to watch it on YouTube). The video explains the pedagogical aspects of how the class works.\n",
+    "> **_Video lecture_**: Start by watching the \"[How we do things](https://www.youtube.com/watch?v=NHr6Jzy9q_A)\" video below. The video explains the pedagogical aspects of how the class works.\n",
     "> "
    ]
   },
@@ -65,7 +65,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520bad0>"
+       "<IPython.lib.display.YouTubeVideo at 0x103faf590>"
       ]
      },
      "execution_count": 1,
@@ -104,7 +104,7 @@
    "source": [
     "## Part 3: Simple Python exercises\n",
     "\n",
-    "> **_Video lecture_**: You get started on this part going to the Lectures section and watching the \"IPython Notebook\" video - or click on the image below to see the video on YouTube. "
+    "> **_Video lecture_**: You get started on this part by watching the \"IPython Notebook\" video below. "
    ]
   },
   {
@@ -129,7 +129,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520b8d0>"
+       "<IPython.lib.display.YouTubeVideo at 0x103faf390>"
       ]
      },
      "execution_count": 2,
@@ -169,7 +169,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520b250>"
+       "<IPython.lib.display.YouTubeVideo at 0x103fafad0>"
       ]
      },
      "execution_count": 3,
@@ -232,7 +232,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520b910>"
+       "<IPython.lib.display.YouTubeVideo at 0x103faf490>"
       ]
      },
      "execution_count": 4,
