--- a/lectures/Week1.ipynb
+++ b/lectures/Week1.ipynb
@@ -65,7 +65,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520bad0>"
+       "<IPython.lib.display.YouTubeVideo at 0x106318b50>"
       ]
      },
      "execution_count": 1,
@@ -129,7 +129,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520b8d0>"
+       "<IPython.lib.display.YouTubeVideo at 0x106318e10>"
       ]
      },
      "execution_count": 2,
@@ -169,7 +169,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520b250>"
+       "<IPython.lib.display.YouTubeVideo at 0x106318f90>"
       ]
      },
      "execution_count": 3,
@@ -232,7 +232,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10520b910>"
+       "<IPython.lib.display.YouTubeVideo at 0x106318e90>"
       ]
      },
      "execution_count": 4,
