--- a/lectures/Week2.ipynb
+++ b/lectures/Week2.ipynb
@@ -30,46 +30,116 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"https://www.youtube.com/embed/42KjmxgYYNI\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x105443ad0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Video 1. The structure of the course (screencast)\n",
+    "# Video 1. The structure of the course\n",
     "# - home page\n",
     "# - where you can find information (grading, books, etc)\n",
-    "# - course structure\n"
+    "# - course structure\n",
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo(\"42KjmxgYYNI\",width=800, height=450)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"https://www.youtube.com/embed/sSQBcbQ3FL0\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x1054438d0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Video 2: The assignments (screencast)\n",
+    "# Video 2: The assignments\n",
     "# - Assignment 1 & 2\n",
     "# - Project Assignment A\n",
-    "# - Project Assignment B"
+    "# - Project Assignment B\n",
+    "YouTubeVideo(\"sSQBcbQ3FL0\",width=800, height=450)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"https://www.youtube.com/embed/-TC18KgpiIQ\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x105443a10>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Video 3. Peer grading (actual video)\n",
+    "# Video 3. Peer grading\n",
     "# - The problem. Feedback is impossible in a large course\n",
     "# - The solution. Peergrade.io.\n",
     "#  - You'll get great feedback, and you'll be qualified to give feedback\n",
     "#  - You'll get smarter. Providing feedback actually accellerates your learning. \n",
     "#  - It's more work, but you'll get credit for it. Good feedback is rewarded - bad feedback is punished.\n",
     "#  - How does that work. Feedback on feedback (even on TA evaluations).\n",
-    "#  - It's all anonymous."
+    "#  - It's all anonymous.\n",
+    "YouTubeVideo(\"-TC18KgpiIQ\",width=800, height=450)"
    ]
   },
   {
@@ -137,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
