added a bit more content

--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -10,10 +10,15 @@
     "\n",
     "This week we'll be getting into the principles of machine learning, while starting to get to know the dataset. The lecture will feature an overview of fundamentals of machine learning (videos), and we'll (_finally_) start working on getting to know the dataset we'll be crunching over the next few weeks.\n",
     "\n",
+    "Don't forget that the overarching goal of the class is to do _predictive policing_ in the style of the tv-show [_NUMB3ERS_](https://www.youtube.com/watch?v=dSOrAQMXTcc) or Minority Report. In order to do that, however, we need to understand the patterns in the crime dataset. That's what we'll be doing today.\n",
+    "\n",
     "* Part 1 of today's exercises will be about getting data.\n",
     "* Part 2 is the \"main course\", where we'll be playing around with real data, plotting and counting.\n",
     "* Part 3 is about machine learning, featuring a couple of videos with Ole Winter from DTU Compute and some simple questions from the book.\n",
-    "* And finally, in Part 4, we plot a little bit of the detailed GPS data."
+    "* And finally, in Part 4, we plot a little bit of the detailed GPS data.\n",
+    "* In part 5, which is optional, you get to generalize the KNN example to the SF dataset.\n",
+    "\n",
+    "Now let's get to work."
    ]
   },
   {
@@ -98,7 +103,7 @@
    "source": [
     "> * My plot looks like this for the 14 focus crimes:\n",
     "    ![Histograms](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/temporal_categories.png)\n",
-    "    Comment on at least three interesting trends in your plot. Take a look at [this article](http://www.nytimes.com/2015/05/23/us/high-rents-elbow-latinos-from-san-franciscos-mission-district.html) - are the trends you observe consistent with the message in the article?"
+    "    Comment on at least three interesting trends in your plot. Take a look at [this article](http://www.nytimes.com/2015/05/23/us/high-rents-elbow-latinos-from-san-franciscos-mission-district.html) or [this one](http://www.cjjc.org/publications/maria-poblets-blog/576-heart-of-sf) - are the trends you observe consistent with the message in the articles?"
    ]
   },
   {
@@ -184,14 +189,38 @@
    "source": [
     "## Part 4: A little bit of plotting\n",
     "\n",
-    "There's a lot of rich geo-data in the crime dataset that we haven't explored yet. Recall that every incident in the database also has an associated GPS location. We're not going to dig deep regarding the geodata quite yet, but it's interesting to just start plotting a little bit."
+    "There's a lot of rich geo-data in the crime dataset that we haven't explored yet. Recall that every incident in the database also has an associated GPS location. We're not going to dig deep regarding the geodata quite yet, but it's interesting to just start plotting a little bit.\n",
+    "\n",
+    "We'll be using the package [`geoplotlib`](https://github.com/andrea-cuttone/geoplotlib) to plot geographical data (it's like `matplotlib` but for geo-data). You can't install geoplotlib using `conda install` since it's not part of the Anaconda framework. But we _do_ want to install `geoplotlib` so that it integrates with Anaconda. The way to do that is to use another package installer called [`pip`](https://en.wikipedia.org/wiki/Pip_(package_manager)). Your system may have multiple versions of `pip` so, it's important that you use the one that comes with Anaconda. On my computer, that file is stored in `~/anaconda/bin`, so to install I simply type\n",
+    "\n",
+    "```\n",
+    ">> ~/anaconda/bin/pip install pyglet\n",
+    ">> ~/anaconda/bin/pip install geoplotlib\n",
+    "```  \n",
+    "That first line is there because you need to install a library called pyglet in order for `geoplotlib` to work.\n",
+    "\n",
+    "Now that we have the capabilities for plotting, we need to get data in the format that `geoplotlib` requires. Your put your geodata in a dictionary structured as follows.\n",
+    "\n",
+    "```\n",
+    "geo_data_for_plotting = {\"lat\": [list-of-latitudes],\n",
+    "                         \"lon\": [list of longitudes]}\n",
+    "```\n",
+    "\n",
+    "Check out the [user guide](https://github.com/andrea-cuttone/geoplotlib/wiki/User-Guide) and [example gallary](https://github.com/andrea-cuttone/geoplotlib) to see some of the cool things you can do.\n",
+    "\n",
+    "**Oh and one last thing**: In order to plot inside your notebook, use `geoplotlib.inline()`\n",
+    "\n",
+    "> _Exercise_: Create a kernel density map plot of all crimes from the CSV file.\n",
+    "\n",
+    "Here's my version\n",
+    "[]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5 (Optional): K-nearest neighbors. "
+    "## Part 5 (Optional): K-nearest-neighbors. "
    ]
   },
   {
