--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -211,16 +211,20 @@
     "**Oh and one last thing**: In order to plot inside your notebook, use `geoplotlib.inline()`\n",
     "\n",
     "> _Exercise_: Create a kernel density map plot of all crimes from the CSV file.\n",
+    "> Here's my version\n",
     "\n",
-    "Here's my version\n",
-    "[]"
+    "> ![Histograms](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/kde_plot.png)\n",
+    "\n",
+    "> Note that there's very bright spot just south of south of market. Check out the map carefully and see if you can figure out what it is"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5 (Optional): K-nearest-neighbors. "
+    "## Part 5 (Optional): K-nearest-neighbors. \n",
+    "\n",
+    "Hmm. I think the exercise are starting to extend beyond the 5 ECTS time-limit, so the K-nearest-neighbor exercise will be optional."
    ]
   },
   {
