--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -176,11 +176,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> _Reading_: DSFS Chapter 11\n",
+    "> _Reading_: DSFS Chapter 11. This covers really important ground in machine learning. Take a close look at the text, and be ready to return to this after trying out some machine learning methods in subsequent lectures.\n",
     "\n",
     "---\n",
     "\n",
-    "> _Exercises_: A few simple questions about machine learning."
+    "> _Exercises_: A few simple questions about machine learning. No need for any calculations - just answer the following questions _in your own words_. A few sentences per question is enough.\n",
+    "> * What is the main problem with overfitting?\n",
+    "> * The `Luke is for leukemia` is a great example of why _accuracy_ is not a good measure in very unbalanced problems. You know about the incidents dataset we've been working with. Try to come up with a similarly crazy based on the data we've been working with today.\n",
+    "> *"
    ]
   },
   {
@@ -222,9 +225,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5 (Optional): K-nearest-neighbors. \n",
+    "## Part 5: K-nearest-neighbors. \n",
     "\n",
-    "Hmm. I think the exercise are starting to extend beyond the 5 ECTS time-limit, so the K-nearest-neighbor exercise will be optional."
+    "Hmm. I think the exercise are starting to extend beyond the 5 ECTS time-limit, so the difficult part of the K-nearest-neighbor exercise will be optional. You will have to read the chapter and answer a few general questions.\n",
+    "\n",
+    "> _Reading_: DSFS Chapter 12. Pay special attention to the example on page 153-156.\n",
+    "\n",
+    "---\n",
+    "> _Exercises_: K-nearest-neighbors\n",
+    "> * How does K-nearest neighbors work? Explain in your own words.\n",
+    "> * Explain in your own words: What is the curse of dimensionality? Use figure 12-6 to as part of your explanation.\n",
+    "> * **Optional**: Adjust the example on pp 153 to work on actual crime data (it's OK to just choose a few data points to work from). And use `geoplotlib` to visualize the result."
    ]
   },
   {
