--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -18,7 +18,18 @@
     "* And finally, in Part 4, we plot a little bit of the detailed GPS data.\n",
     "* In part 5, which is optional, you get to generalize the KNN example to the SF dataset.\n",
     "\n",
-    "Now let's get to work."
+    "First, a little unofficial video greeting from me - then, let's get to work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# mini sune greeting"
    ]
   },
   {
@@ -42,9 +53,8 @@
     ">   - The various categories of crimes\n",
     ">   - Crime over the years\n",
     ">   - What time of day do crimes occur?\n",
-    ">   - What day of the week to crimes tend to occur?\n",
     ">   - And do certain crime-types tend to happen in specific neighborhoods?\n",
-    ">   - Finally, we'll play around with geo-data.  \n",
+    ">   - We'll play around with geo-data. \n",
     "> \n",
     ">   All of this can be easily based on the columns in the incident file. Which columns will you need?\n",
     "\n",
@@ -180,10 +190,12 @@
     "\n",
     "---\n",
     "\n",
-    "> _Exercises_: A few simple questions about machine learning. No need for any calculations - just answer the following questions _in your own words_. A few sentences per question is enough.\n",
+    "> _Exercises_: A few simple questions about machine learning. \n",
+    "> * What do we mean by a 'feature' in a machine learning model?\n",
     "> * What is the main problem with overfitting?\n",
-    "> * The `Luke is for leukemia` is a great example of why _accuracy_ is not a good measure in very unbalanced problems. You know about the incidents dataset we've been working with. Try to come up with a similarly crazy based on the data we've been working with today.\n",
-    "> *"
+    "> * Explain the connection between the bias-variance trade-off and overfitting/underfitting.\n",
+    "> * The `Luke is for leukemia` is a great example of why _accuracy_ is not a good measure in very unbalanced problems. You know about the incidents dataset we've been working with. Try to come up with a similar example based on the data we've been working with today.\n",
+    "> * "
    ]
   },
   {
