--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -186,16 +186,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> _Reading_: DSFS Chapter 11. This covers really important ground in machine learning. Take a close look at the text, and be ready to return to this after trying out some machine learning methods in subsequent lectures.\n",
+    "> _Reading_: DSFS Chapter 11. This covers really important ground in machine learning. Take a close look at the text, and be ready to return to this chapter after trying out some machine learning methods in subsequent lectures.\n",
     "\n",
     "---\n",
     "\n",
-    "> _Exercises_: A few simple questions about machine learning. \n",
+    "> _Exercises_: A few questions about machine learning. \n",
     "> * What do we mean by a 'feature' in a machine learning model?\n",
     "> * What is the main problem with overfitting?\n",
     "> * Explain the connection between the bias-variance trade-off and overfitting/underfitting.\n",
-    "> * The `Luke is for leukemia` is a great example of why _accuracy_ is not a good measure in very unbalanced problems. You know about the incidents dataset we've been working with. Try to come up with a similar example based on the data we've been working with today.\n",
-    "> * "
+    "> * The `Luke is for leukemia` is a great example of why _accuracy_ is not a good measure in very unbalanced problems. You know about the incidents dataset we've been working with. Try to come up with a similar example based on the data we've been working with today."
    ]
   },
   {
